Removed unused activities and cleaned up legacy layouts in an effort to make it more readable.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="window">Window Frame</string>
     <string name="sun">The Sun</string>
     <string name="cloud">A Cloud</string>
+    <string name="title_activity_test">test</string>
+    <string name="title_activity_about">About</string>
 </resources>
